fixes letter height to center letters in boxes

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 				border: 1px solid grey;
 				color: black;
 				margin-bottom: 8px;
+				letter-height: 24px;
 			}
 
 		}
@@ -170,10 +171,10 @@
 					border: 1px solid grey;
 					color: black;
 					margin-bottom: 8px;
+					letter-height: 50px;
 				}
 
 			}
-
 			.debug-container {
 				display: flex;
 				width: 100%;
